--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -14,3 +14,5 @@ base64 = "0.12"
 clap = "3.0.0-beta.1"
 anyhow = "1.0.32"
 uuid = "0.8.1"
+reqwest = "*"
+tokio = { version = "*", features = ["full"]}
