--- a/javascript/verify/package.json
+++ b/javascript/verify/package.json
@@ -1,27 +1,25 @@
 {
-  "name": "signing",
+  "name": "verify-webhook",
   "version": "0.1.0",
   "description": "",
-  "main": "src/main.ts",
+  "main": "src/main.js",
   "scripts": {
-    "signing": "TS_NODE_PROJECT='./tsconfig.json' ts-node ./src/main.ts"
+    "verify": "node ./src/main.js"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/TrueLayer/paydirect-signing-examples.git"
   },
-  "author": "David Hayden <david.hayden@truelayer.com>",
+  "author": "Alex Butler <alex.butler@truelayer.com>",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/TrueLayer/paydirect-signing-examples/issues"
   },
   "homepage": "https://github.com/TrueLayer/paydirect-signing-examples#readme",
   "dependencies": {
-    "@types/jws": "^3.2.4",
-    "@types/yargs": "^16.0.4",
+    "js-base64": "^3.6.1",
+    "jwks-rsa": "^2.0.4",
     "jws": "^4.0.0",
-    "ts-node": "^10.1.0",
-    "typescript": "^4.3.5",
     "yargs": "^16.2.0"
   }
 }
