--- a/java/verify/build.gradle
+++ b/java/verify/build.gradle
@@ -3,7 +3,7 @@
  *
  * This generated file contains a sample Java project to get you started.
  * For more details take a look at the Java Quickstart chapter in the Gradle
- * User Manual available at https://docs.gradle.org/6.6.1/userguide/tutorial_java_projects.html
+ * User Manual available at https://docs.gradle.org/7.1.1/userguide/tutorial_java_projects.html
  */
 
 plugins {
@@ -27,18 +27,15 @@ dependencies {
     implementation 'info.picocli:picocli:4.5.2'
     annotationProcessor 'info.picocli:picocli-codegen:4.5.2'
 
-    implementation 'com.nimbusds:nimbus-jose-jwt:9.1.2'
-    implementation 'org.bouncycastle:bcprov-jdk15on:1.52'
-    implementation 'org.bouncycastle:bcpkix-jdk15on:1.52'
-
+    implementation 'com.auth0:java-jwt:3.18.1'
+    implementation 'com.auth0:jwks-rsa:0.19.0'
 
     // Use JUnit test framework
-    testImplementation 'junit:junit:4.13'
+    testImplementation 'junit:junit:4.13.2'
 }
 
 application {
-    // Define the main class for the application.
-    mainClassName = 'signing.App'
+    mainClassName = 'verify.App'
 }
 
 shadowJar {
