--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,14 +2,52 @@ version: 2
 
 jobs:
   rust-verify:
+    resource_class: large
     docker:
       - image: rust:1
     steps:
       - checkout
-      - run: "cd rust/verify && ../../.circleci/test-verify cargo run -q --"
+      - run: cd rust && cargo build -p verify-webhook
+      - run: cd rust/verify && ../../.circleci/test-verify cargo run -q --
+
+  python-verify:
+    docker:
+      - image: cimg/python:3.9
+    steps:
+      - checkout
+      - run: cd python && pipenv sync
+      - run: cd python && ../.circleci/test-verify pipenv run python verify.py
+
+  csharp-verify:
+    docker:
+      - image: mcr.microsoft.com/dotnet/sdk:5.0
+    steps:
+      - checkout
+      - run: cd csharp/verify && dotnet restore
+      - run: cd csharp/verify && ../../.circleci/test-verify dotnet run --
+
+  javascript-verify:
+    docker:
+      - image: cimg/node:lts
+    steps:
+      - checkout
+      - run: cd javascript/verify && npm i
+      - run: cd javascript/verify && ../../.circleci/test-verify node src/main.js
+
+  typescript-verify:
+    docker:
+      - image: cimg/node:lts
+    steps:
+      - checkout
+      - run: cd typescript/verify && npm i
+      - run: cd typescript/verify && ../../.circleci/test-verify npm run verify --
 
 workflows:
   version: 2
   test:
     jobs:
       - rust-verify
+      - python-verify
+      - csharp-verify
+      - javascript-verify
+      - typescript-verify
