Fix rust example

--- a/rust/verify/Cargo.toml
+++ b/rust/verify/Cargo.toml
@@ -7,7 +7,9 @@ publish = false
 
 [dependencies]
 base64 = "0.13"
-clap = "3.0.0-beta.1"
+clap = "3.0.0-beta.5"
 anyhow = "1.0.32"
 picky = "6.3"
+serde = { version = "1", features = ["derive"] }
+serde_json = "1"
 reqwest = { version = "0.11", features = ["blocking", "json"] }
