--- a/rust/sign/Cargo.toml
+++ b/rust/sign/Cargo.toml
@@ -10,6 +10,6 @@ openssl = "0.10"
 serde = { version = "1", features = ["derive"] }
 serde_json = { version = "1", features = ["preserve_order"] }
 base64 = "0.13"
-clap = "3.0.0-beta.1"
+clap = { version = "3", features = ["derive"] }
 anyhow = "1.0.32"
 uuid = "0.8.1"
